# typst-test

./: .ignore  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  REWORK.md  flake.nix  justfile  migrating.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  gh-pages.yml
assets/test-assets/collect/compile/: test.typ
assets/test-assets/collect/ignored/: test.typ
assets/tests/: panic.typ
assets/workflows/: tests.yml
crates/typst-manifest/: Cargo.toml
crates/typst-manifest/src/: error.rs  lib.rs  package.rs  tool.rs
crates/typst-test/: Cargo.toml
crates/typst-test-cli/: Cargo.toml
crates/typst-test-cli/src/: cli.rs  download.rs  error.rs  fonts.rs  kit.rs  main.rs  package.rs  project.rs  report.rs  runner.rs  test.rs  ui.rs  world.rs
crates/typst-test-cli/src/cli/: add.rs  clean.rs  compare.rs  compile.rs  config.rs  debug.rs  edit.rs  init.rs  list.rs  mod.rs  remove.rs  run.rs  status.rs  uninit.rs  update.rs  util.rs
crates/typst-test-cli/src/cli/config/: default.rs  get.rs  list.rs  set.rs
crates/typst-test-cli/src/cli/debug/: parse_test_set.rs
crates/typst-test-cli/src/cli/util/: about.rs  clean.rs  export.rs  fonts.rs  migrate.rs  mod.rs
crates/typst-test-cli/src/project/: mod.rs
crates/typst-test-cli/src/project/test/: context.rs  mod.rs  runner.rs
crates/typst-test-cli/src/snapshots/: typst_test__ui__tests__counted.snap  typst_test__ui__tests__heading.snap  typst_test__ui__tests__heading_set_color.snap  typst_test__ui__tests__indented_nested.snap  typst_test__ui__tests__indented_set_color.snap
crates/typst-test-cli/src/test/: runner.rs
crates/typst-test-lib/: Cargo.toml
crates/typst-test-lib/src/: _dev.rs  compare.rs  compile.rs  config.rs  hook.rs  lib.rs  library.rs  render.rs  store.rs  test.rs  test_set.rs  util.rs
crates/typst-test-lib/src/_dev/: fs.rs
crates/typst-test-lib/src/compare/: structural.rs  visual.rs
crates/typst-test-lib/src/doc/: compare.rs  compile.rs  mod.rs  render.rs
crates/typst-test-lib/src/project/: mod.rs  vcs.rs
crates/typst-test-lib/src/stdx/: fmt.rs  fs.rs  mod.rs  result.rs
crates/typst-test-lib/src/store/: on_disk.rs  page.rs  project.rs  test.rs  vcs.rs
crates/typst-test-lib/src/store/project/: legacy.rs  v1.rs
crates/typst-test-lib/src/store/test/: collector.rs  matcher.rs
crates/typst-test-lib/src/test/: annotation.rs  collector.rs  id.rs  matcher.rs  mod.rs  result.rs  stage.rs  suite.rs
crates/typst-test-lib/src/test/stage/: compare.rs  compile.rs  store.rs
crates/typst-test-lib/src/test/stage/compile/: external.rs  in_memory.rs
crates/typst-test-lib/src/test/stage/store/: on_disk.rs
crates/typst-test-lib/src/test_set/: ast.rs  builtin.rs  eval.rs  glob.rs  grammar.pest  id.rs  mod.rs  num.rs  parse.rs  parsing.rs  pat.rs  regex.rs  str.rs
crates/typst-test-lib/src/test_set/eval/: func.rs  mod.rs  set.rs  value.rs
crates/typst-test-stdx/: Cargo.toml
crates/typst-test-stdx/src/: fmt.rs  fs.rs  lib.rs  result.rs
crates/typst-test/src/: cli.rs  config.rs  json.rs  kit.rs  main.rs  report.rs  util.rs  world.rs
crates/typst-test/src/cli/: init.rs  list.rs  mod.rs  remove.rs  uninit.rs  update.rs
crates/typst-test/src/cli/util/: fonts.rs
crates/typst-test/src/project/: fs.rs  mod.rs
crates/typst-test/src/project/test/: context.rs  mod.rs
crates/typst-test/src/snapshots/: tt__ui__tests__indented.snap  tt__ui__tests__indented_continued.snap
docs/: test-set-dsl.typ
docs/book/: book.toml
docs/book/src/: README.md  SUMMARY.md
docs/book/src/.guides/: tests.md
docs/book/src/guides/: ci.md  test-sets.md  tests.md  watching.md
docs/book/src/quickstart/: install.md  usage.md
docs/book/src/reference/test-sets/: README.md  built-in.md  eval.md  grammar.md
docs/book/src/reference/tests/: README.md  annotations.md  lib.md  regression-tests.md
docs/book/src/test-sets/: README.md  built-in.md
just/: check.just  doc.just  test.just
src/: cli.rs  main.rs  report.rs  util.rs
src/project/: fs.rs  mod.rs  test.rs
src/project/test/: context.rs  mod.rs
tests/: template.typ
tests/failure/dimension/: test.typ
tests/typ/page-count/: test.typ
