[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
# must match ci.yml
rust-version = "1.80.0"
authors = ["tingerrr <me@tinger.dev>"]
edition = "2021"
homepage = "https://tingerrr.github.io/typst-test/"
repository = "https://github.com/tingerrr/typst-test"
license = "Apache-2.0"
categories = [
  "command-line-utilities",
  "development-tools::testing",
]
keywords = ["typst", "test"]
readme = "README.md"

[workspace.dependencies]
typst-project = { git = "https://github.com/tingerrr/typst-project", rev = "a71db5451ebdca2174adc0a323c71ba5ab2f8120" }

anyhow = "1.0.78"
clap = "4.4.12"
bitflags = "2.4.2"
bytemuck = "1.16.1"
chrono = "0.4.38"
codespan-reporting = "0.11.1"
comemo = "0.4.0"
dirs = "5.0.1"
ecow = "0.2.2"
env_proxy = "0.4.1"
flate2 = "1.0.30"
fontdb = "0.18.0"
indoc = "2.0.5"
insta = "1.39.0"
ignore = "0.4.22"
native-tls = "0.2.12"
once_cell = "1.19.0"
pest_derive = "2.7.10"
pest = "2.7.10"
png = "0.17.13"
rayon = "1.8.0"
regex = "1.10.5"
semver = "1.0.23"
serde = "1.0.195"
serde_json = "1.0.121"
tar = "0.4.41"
tempdir = "0.3.7"
termcolor = "1.4.0"
tiny-skia = "0.11.4"
thiserror = "1.0.56"
toml = "0.8.11"
toml_edit = "0.22.17"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tree = "0.3.0"
typst = "0.11.1"
typst-assets = "0.11.0"
typst-dev-assets = { git = "https://github.com/typst/typst-dev-assets", rev = "ee8ae61cca138dc92f9d818fc7f2fc046d0148c5" }
typst-render = "0.11.1"
unscanny = "0.1.0"
ureq = { version = "2.9.7", default-features = false }
