[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
# must match ci.yml
rust-version = "1.80.0"
authors = ["tingerrr <me@tinger.dev>"]
edition = "2021"
homepage = "https://tingerrr.github.io/typst-test/"
repository = "https://github.com/tingerrr/typst-test"
license = "Apache-2.0"
categories = ["command-line-utilities", "development-tools::testing"]
keywords = ["typst", "test"]
readme = "README.md"

[workspace.dependencies]
chrono = "0.4.38"
clap = "4.4.12"
codespan-reporting = "0.11.1"
color-eyre = "0.6.3"
comemo = "0.4.0"
ctrlc = "3.4.5"
dirs = "5.0.1"
ecow = "0.2.2"
fontdb = "0.18.0"
glob = "0.3.1"
insta = "1.39.0"
once_cell = "1.19.0"
oxipng = "9.1.3"
pest = "2.7.10"
pest_derive = "2.7.10"
png = "0.17.16"
rayon = "1.8.0"
regex = "1.10.5"
serde = "1.0.195"
serde_json = "1.0.121"
strsim = "0.11.1"
termcolor = "1.4.0"
thiserror = "1.0.56"
tiny-skia = "0.11.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tree = "0.3.0"
toml = "0.8.19"
typst = "0.12.0"
typst-kit = "0.12.0"
typst-render = "0.12.0"
typst-syntax = "0.12.0"
uuid = "1.11.0"
