[package]
name = "typst-test"
repository = "https://github.com/tingerrr/typst-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typst-test-lib = { path = "../typst-test-lib" }

anyhow = { workspace = true, features = ["backtrace"] }
bitflags.workspace = true
clap = { workspace = true, features = ["derive"] }
comemo.workspace = true
ecow.workspace = true
fontdb.workspace = true
rayon.workspace = true
semver.workspace = true
serde.workspace = true
termcolor.workspace = true
tiny-skia.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
typst.workspace = true
typst-project.workspace = true
typst-assets = { workspace = true, optional = true, features = ["fonts"] }

[features]
default = ["embed-fonts"]
embed-fonts = ["dep:typst-assets"]
