[package]
name = "typst-test"
repository = "https://github.com/tingerrr/typst-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typst-test-lib = { path = "../typst-test-lib" }

anyhow = { workspace = true, features = ["backtrace"] }
bitflags.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
chrono.workspace = true
codespan-reporting.workspace = true
comemo.workspace = true
dirs.workspace = true
ecow.workspace = true
env_proxy.workspace = true
flate2.workspace = true
fontdb.workspace = true
native-tls.workspace = true
once_cell.workspace = true
rayon.workspace = true
semver.workspace = true
serde.workspace = true
tar.workspace = true
termcolor.workspace = true
tiny-skia.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
typst.workspace = true
typst-project.workspace = true
typst-assets = { workspace = true, optional = true, features = ["fonts"] }
ureq = { workspace = true, default-features = false, features = ["native-tls", "gzip", "json"] }

[features]
default = ["embed-fonts"]
embed-fonts = ["dep:typst-assets"]
