[package]
name = "typst-test-cli"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[[bin]]
name = "typst-test"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typst-test-lib = { path = "../typst-test-lib" }

anyhow = { workspace = true, features = ["backtrace"] }
bitflags.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
chrono = { workspace = true, features = ["serde"] }
codespan-reporting.workspace = true
comemo.workspace = true
dirs.workspace = true
ecow.workspace = true
env_proxy.workspace = true
flate2.workspace = true
fontdb.workspace = true
insta = { workspace = true, features = ["yaml"] }
native-tls.workspace = true
once_cell.workspace = true
rayon.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
termcolor.workspace = true
tiny-skia.workspace = true
thiserror.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
typst.workspace = true
typst-project.workspace = true
typst-assets = { workspace = true, optional = true, features = ["fonts"] }
ureq = { workspace = true, default-features = false, features = ["native-tls", "gzip", "json"] }

[features]
default = ["embed-fonts"]
embed-fonts = ["dep:typst-assets"]
