[package]
name = "typst-test-lib"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
bytemuck.workspace = true
comemo.workspace = true
ecow.workspace = true
ignore.workspace = true
once_cell.workspace = true
pest_derive.workspace = true
pest.workspace = true
png.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["derive"] }
regex.workspace = true
tiny-skia.workspace = true
thiserror.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
typst.workspace = true
typst-render.workspace = true
unscanny.workspace = true

[dev-dependencies]
dirs.workspace = true
indoc.workspace = true
tempdir.workspace = true
typst-assets = { workspace = true, features = ["fonts"] }
typst-dev-assets.workspace = true
