[package]
name = "typst-test-lib"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comemo.workspace = true
dirs.workspace = true
ecow.workspace = true
glob.workspace = true
once_cell.workspace = true
oxipng.workspace = true
pest.workspace = true
pest_derive.workspace = true
png.workspace = true
rayon.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
strsim.workspace = true
thiserror.workspace = true
tiny-skia.workspace = true
tracing.workspace = true
toml.workspace = true
typst-render.workspace = true
typst.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
bytemuck = "1.16.1"
tempdir = "0.3.7"
typst-assets = { version = "0.12.0", features = ["fonts"] }
typst-dev-assets = { git = "https://github.com/typst/typst-dev-assets", rev = "ee8ae61" }
