[package]
name = "typst-test-stdx"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
tempdir.workspace = true
tracing.workspace = true
