[package]
name = "typst-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typst-manifest = { path = "../typst-manifest" }

anyhow = { version = "1.0.78", features = ["backtrace"] }
clap = { version = "4.4.12", features = ["derive"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }
open = "5.0.1"
oxipng = { version = "9.0.0", features = ["image"] }
rayon = "1.8.0"
termcolor = "1.4.0"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tree = "0.3.0"
serde = { version = "1.0.195", features = ["derive"] }
semver = "1.0.21"
walkdir = "2.4.0"
