[package]
name = "typst-test"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true

[[bin]]
name = "tt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../typst-test-lib", package = "typst-test-lib" }

bitflags.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
color-eyre.workspace = true
ctrlc.workspace = true
codespan-reporting.workspace = true
comemo.workspace = true
dirs.workspace = true
ecow.workspace = true
env_proxy.workspace = true
flate2.workspace = true
fontdb.workspace = true
insta = { workspace = true, features = ["yaml"] }
native-tls.workspace = true
once_cell.workspace = true
oxipng.workspace = true
rayon.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
termcolor.workspace = true
tiny-skia.workspace = true
thiserror.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
typst.workspace = true
typst-kit.workspace = true
typst-syntax.workspace = true
ureq = { workspace = true, default-features = false, features = ["native-tls", "gzip", "json"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[features]
default = ["embed-fonts"]
embed-fonts = ["typst-kit/embed-fonts"]
vendor-openssl = ["typst-kit/vendor-openssl"]
